@@ -148,4 +148,4 @@
 
 // ReplaceLocalizedFiles
 "ReplaceLocalizedFilesTitle" = "Skal de valgte lokaliserede arkiver genopbygges?";
-"ReplaceLocalizedFilesDescr" = "Vil du virkelig genopbygge de valgte lokaliserede arkiver med deres korresponderende basis-arkiver?"
+"ReplaceLocalizedFilesDescr" = "Vil du virkelig genopbygge de valgte lokaliserede arkiver med deres korresponderende basis-arkiver?";
